still working on spacing issue, removed the font-size and letter spacing properties

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -46,7 +46,7 @@ body{
     margin: 10px;
     padding: 30px;
     /* letter-spacing: 2px; */
-    font-size: 20px;
+    /* font-size: 20px; */
 }
 
 .selected{
